<resources>
    <string name="app_name">bulletinBoard</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_category1">Объявления</string>
    <string name="ad_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>

    <string name="ad_category2">Аккаунт</string>
    <string name="aс_sing_up">Регистрация</string>
    <string name="aс_sing_in">Вход</string>
    <string name="aс_sing_out">Выход</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="not_reg">Войдите или зарегистрируйтесь!</string>


    <!-- Sign dialog -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрировать</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_email_done">На вашу почту была отправлены ссылка для подтверждения вашего аккаунта</string>
    <string name="email_reset_password_was_sent">" Ссылка на сброс пароля отправлена."</string>
    <string name="dialog_reset_email_message">"Для восстановления пароля укажите E-mail адресс"</string>
    <string name="sign_in_with_google">Войти через Google</string>


</resources>