<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <item android:title="@string/ad_category1">
        <menu>
            <item
                android:title="@string/ad_ads"
                android:id="@+id/id_ads"
                />
            <item
                android:title="@string/ad_car"
                android:id="@+id/id_car"
                />
            <item
                android:title="@string/ad_pc"
                android:id="@+id/id_pc"
                />
            <item
                android:title="@string/ad_smartphone"
                android:id="@+id/id_smartphone"
                />
            <item
                android:title="@string/ad_dm"
                android:id="@+id/id_dm"
                />
        </menu>
    </item>

    <item android:title="@string/ad_category2">
        <menu>
            <item
                android:title="@string/aс_sing_up"
                android:id="@+id/id_sing_up"
                />
            <item
                android:title="@string/aс_sing_in"
                android:id="@+id/id_sing_in"
                />
            <item
                android:title="@string/aс_sing_out"
                android:id="@+id/id_sing_out"
                />
        </menu>
    </item>
</menu>